Website/Inventory-Management-System-MERN-Stack-main/k8s/03-auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: inventory-management
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: ahmedwalid1410/ims-auth-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: inventory-management
spec:
  selector:
    app: auth-service
  ports:
    - port: 4001
      targetPort: 4001
  type: ClusterIP
