Website/Inventory-Management-System-MERN-Stack-main/k8s/04-product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: inventory-management
  labels:
    app: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: ahmedwalid1410/ims-product-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: inventory-management
spec:
  selector:
    app: product-service
  ports:
    - port: 4002
      targetPort: 4002
  type: ClusterIP
