Website/Inventory-Management-System-MERN-Stack-main/k8s/05-order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: inventory-management
  labels:
    app: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: DOCKERHUB_USER/ims-order-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4003
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: inventory-management
spec:
  selector:
    app: order-service
  ports:
    - port: 4003
      targetPort: 4003
  type: ClusterIP
