Website/Inventory-Management-System-MERN-Stack-main/k8s/06-inventory-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  namespace: inventory-management
  labels:
    app: inventory-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
    spec:
      containers:
        - name: inventory-service
          image: ahmedwalid1410/ims-inventory-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4004
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: inventory-management
spec:
  selector:
    app: inventory-service
  ports:
    - port: 4004
      targetPort: 4004
  type: ClusterIP
