Website/Inventory-Management-System-MERN-Stack-main/k8s/07-statistics-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statistics-service
  namespace: inventory-management
  labels:
    app: statistics-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statistics-service
  template:
    metadata:
      labels:
        app: statistics-service
    spec:
      containers:
        - name: statistics-service
          image: ahmedwalid1410/ims-statistics-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4005
---
apiVersion: v1
kind: Service
metadata:
  name: statistics-service
  namespace: inventory-management
spec:
  selector:
    app: statistics-service
  ports:
    - port: 4005
      targetPort: 4005
  type: ClusterIP
