Website/Inventory-Management-System-MERN-Stack-main/k8s/08-api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: inventory-management
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: ahmedwalid1410/ims-api-gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: inventory-management
spec:
  selector:
    app: api-gateway
  ports:
    - port: 4000
      targetPort: 4000
  type: ClusterIP
