Website/Inventory-Management-System-MERN-Stack-main/k8s/11-alert-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert-service
  namespace: inventory-management
  labels:
    app: alert-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: alert-service

  template:
    metadata:
      labels:
        app: alert-service

    spec:
      containers:
        - name: alert-service
          image: ahmedwalid1410/ims-alert-service:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 4006
---

apiVersion: v1
kind: Service

metadata:
  name: alert-service
  namespace: inventory-management

spec:
  selector:
    app: alert-service

  ports:
    - port: 4006
      targetPort: 4006

  type: ClusterIP
